--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "import": "npx ts-node --compilerOptions {\"\"\"module\"\"\":\"\"\"commonjs\"\"\"} src/scripts/importData.ts",
     "preinstall": "prisma db push",
     "postinstall": "prisma generate"
   },
@@ -27,6 +28,7 @@
   },
   "devDependencies": {
     "@types/node": "18.0.0",
+    "@types/node-fetch": "^2.6.2",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
     "@typescript-eslint/eslint-plugin": "^5.30.6",
@@ -39,9 +41,11 @@
     "eslint-import-resolver-typescript": "^2.7.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-prettier": "^4.0.0",
+    "node-fetch": "^2.6.7",
     "postcss": "^8.4.14",
     "prisma": "^4.0.0",
     "tailwindcss": "^3.1.6",
+    "ts-node": "^10.9.1",
     "typescript": "4.7.4"
   }
 }
