--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "@trpc/next": "^9.26.0",
     "@trpc/react": "^9.26.0",
     "@trpc/server": "^9.26.0",
+    "@types/react-color": "^3.0.6",
+    "@types/react-slick": "^0.23.10",
     "clsx": "^1.2.1",
     "next": "12.2.0",
     "normalize-url": "^7.0.3",
     "react": "18.2.0",
+    "react-color": "^2.19.3",
     "react-dom": "18.2.0",
     "react-query": "^3.39.1",
     "superjson": "^1.9.1",
